# Advanced-Autoformatter

./: CMakeLists.txt  README.md  cycleFounder.c  cycleFounder.h  example.c  fileUtils.c  fileUtils.h  functions.c  functions.h  libraries.h  lineMaker.c  lineMaker.h  main.c  memory.c  memory.h  memory_main.c  optionFunctions.c  optionFunctions.h  parser.c  parser.h  vector.c  vector.h
Autoformatter/: CMakeLists.txt  lineMaker.c  lineMaker.h  nameChecking.c  nameChecking.h  optionFunctions.c  optionFunctions.h  outputFormat.c  outputFormat.h  parser.c  parser.h
Calculator/: CmakeLists.txt  RPN.c  RPN.h  ops.c  ops.h  parser.c  parser.h  stack.h  tree.c  tree.h
Calculator/OpTree/: tree.c  tree.h
Calculator/Operations/: constructions.c  constructions.h  ops.c  ops.h
Calculator/Parser/: parser.c  parser.h
Calculator/RPN/: RPN.c  RPN.h
Calculator/Stack/: stack.c  stack.h
Formatting/: codeFormatting.c  codeFormatting.h
LineMakerAlg/: lineMaker.c  lineMaker.h
calculator/: CMakeLists.txt
calculator/Operations/: ops.c  ops.h
calculator/RPN/: RPN.c  RPN.h
calculator/Stack/: stack.h
images/: example.c  header.h
listings/: LST_Header.h.txt  LST_example.c.txt
optionFuncs/: optionFunctions.c  optionFunctions.h
outputFormatting/: outputFormatting.c  outputFormatting.h
test/: Hander.h  Header.h  example.c  kekt.h  working_example))
